Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16050

cte + geometry functions lead to crash

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3.6, 10.2(EOL), 10.3(EOL)
    • 10.2.18
    • GIS, Optimizer - CTE
    • None
    • Win x64

    Description

      Version: '*10.3.6-MariaDB*'  socket: ''  port: 3306  mariadb.org binary distribution
      180427 18:36:05 [ERROR] mysqld got exception 0xc0000005 ;
      mysqld.exe!sort_list()[plistsort.c:57]
      mysqld.exe!Gcalc_heap::prepare_operation()[gcalc_slicescan.cc:970]
      mysqld.exe!Item_func_spatial_operation::val_str()[item_geofunc.cc:1573]
      mysqld.exe!Item_cache_str::cache_value()[item.cc:10337]
      mysqld.exe!Item_cache_str::val_str()[item.cc:10376]
      mysqld.exe!Arg_comparator::compare_string()[item_cmpfunc.cc:764]
      mysqld.exe!Item_func_lt::val_int()[item_cmpfunc.cc:1781]
      mysqld.exe!eval_const_cond()[item_func.cc:81]
      mysqld.exe!Item_bool_func2::remove_eq_conds()[sql_select.cc:16191]
      mysqld.exe!optimize_cond()[sql_select.cc:15733]
      mysqld.exe!JOIN::optimize_inner()[sql_select.cc:1641]
      mysqld.exe!JOIN::optimize()[sql_select.cc:1433]
      mysqld.exe!mysql_derived_optimize()[sql_derived.cc:938]
      mysqld.exe!mysql_handle_single_derived()[sql_derived.cc:197]
      mysqld.exe!JOIN::optimize_inner()[sql_select.cc:1671]
      mysqld.exe!JOIN::optimize()[sql_select.cc:1433]
      mysqld.exe!mysql_select()[sql_select.cc:4138]
      mysqld.exe!handle_select()[sql_select.cc:370]
      mysqld.exe!execute_sqlcom_select()[sql_parse.cc:6539]
      mysqld.exe!mysql_execute_command()[sql_parse.cc:3768]
      mysqld.exe!mysql_parse()[sql_parse.cc:8006]
      mysqld.exe!dispatch_command()[sql_parse.cc:1848]
      mysqld.exe!do_command()[sql_parse.cc:1390]
      mysqld.exe!threadpool_process_request()[threadpool_common.cc:358]
      mysqld.exe!tp_callback()[threadpool_common.cc:186]
      

      How to Repeat:

      with cte1 as(
        select (st_symdifference(point(1,1),point(1,1))) as a1
      ),
      cte2 as(select 1 as a2) 
      select 1 from cte1 where cte1.a1 < '1';
      

      Attachments

        Activity

          Thanks for the report and test case.

          elenst Elena Stepanova added a comment - Thanks for the report and test case.
          holyfoot Alexey Botchkov added a comment - http://lists.askmonty.org/pipermail/commits/2018-September/012935.html

          People

            holyfoot Alexey Botchkov
            sbester1 sbester1
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.