MDEV-16050 cte + geometry functions lead to crash.

Structures based on Gcalc_dyn_list need to be treated
properly when copied in Item::get_copy().